--- a/package.json
+++ b/package.json
@@ -3,14 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-common": "^3.0.1",
+    "@apollo/react-components": "^3.0.1",
+    "@apollo/react-hoc": "^3.0.1",
+    "@apollo/react-hooks": "^3.1.1",
+    "@apollo/react-ssr": "^3.0.1",
+    "@apollo/react-testing": "^3.0.1",
+    "@types/graphql": "^14.2.0",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.8",
+    "@types/node-fetch": "^2.5.0",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.2",
+    "@types/whatwg-fetch": "0.0.33",
+    "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-datasource-rest": "^0.3.2",
+    "apollo-env": "^0.5.1",
+    "apollo-link": "^1.2.12",
+    "apollo-link-http": "^1.5.15",
+    "apollo-utilities": "^1.3.2",
+    "cross-fetch": "^3.0.4",
+    "graphql": "^14.5.4",
+    "graphql-tag": "^2.10.1",
+    "isomorphic-fetch": "^2.2.1",
+    "next": "^9.0.5",
+    "node-fetch": "^2.6.0",
     "react": "^16.10.1",
+    "react-apollo": "^2.5.8",
+    "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.10.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
-    "typescript": "^3.6.3"
+    "styled-components": "^3.1.6",
+    "type-graphql": "^0.17.5",
+    "typescript": "^3.6.3",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
