--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@apollo/react-hooks": "^3.1.1",
     "@apollo/react-ssr": "^3.0.1",
     "@apollo/react-testing": "^3.0.1",
+    "@material-ui/core": "^4.5.1",
     "@types/graphql": "^14.2.0",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.18",
