svg to react comp

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.2",
     "@types/whatwg-fetch": "0.0.33",
+    "animejs": "^3.1.0",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
